[zhoujunqian]: add webac

--- a/PageTransition/main.html
+++ b/PageTransition/main.html
@@ -163,7 +163,10 @@
             </div>		
 			<div class="pt-page pt-my-page"><h1><span>UT</span>2</h1>
                  <iframe src='nose_report_test.html' frameborder='no' width='100%' height='100%'></iframe>
-			</div>        
+			</div>   
+			<div class="pt-page pt-my-page"><h1><span>E2E</span>3</h1>
+                 <iframe src='webac_test.html' frameborder='no' width='100%' height='100%'></iframe>
+			</div>       
 		</div>
 		
 		<div class="pt-message">
